Addeed models to repo

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ wheels/
 # Model caches and downloads
 ~/.cache/huggingface/
 ~/.EasyOCR/
-~/.paddleocr/
+#~/.paddleocr/
 models/
 downloads/
 **/models/
